<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAct">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/welcome"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="230dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/registernow"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="300dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:ems="10"
            android:hint="@string/regEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="380dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/regPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="480dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/regButton"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/regLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="680dp"
            android:layout_marginStart="40dp"
            android:text="@string/regLoginText"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>