<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="start"
        android:text="@string/loginWelcome"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/welcomeEmail"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="start"
        android:text=""
        android:textSize="20sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/secondaryTitle"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="200dp"
        android:text="@string/ques4"
        android:textSize="15sp" />

    <Button
        android:id="@+id/upload4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/ques1btn" />

    <ImageView
        android:id="@+id/imageupload"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp" />

    <Button
        android:id="@+id/next4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="660dp"
        android:backgroundTint="@color/teal_200"
        android:text="Upload Image" />
</RelativeLayout>